test/cases/compile_errors/chained_comparison_operators.zig
export fn a(value: u32) bool {
    return 1 < value < 1000;
}

// error
//
// :2:22: error: comparison operators cannot be chained
